feat: add syncronize communication

--- a/fulfillment-center-service/src/main/resources/application.properties
+++ b/fulfillment-center-service/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.cloud.function.definition=logUserMessage
 
 #spring.cloud.gcp.project-id=[YOUR_GCP_PROJECT_ID]
 #spring.cloud.gcp.credentials.location=file:[LOCAL_PATH_TO_CREDENTIALS]
+
+logging.structured.format.console=logstash
